/**
 * MIT License
 * Copyright (c) 2021 Fonoster Inc
 *
 * The CallMananger proto contains the artificats for the call mananger
 * such as creation and deployment.
 */
syntax = "proto3";

package fonos.callmanager.v1beta1;

option go_package = "github.com/fonoster/fonos/mods/callmanager/fonos/services/protos/callmanager";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "common.proto";

service CallManager {
  // Originates a call and pass channel to an application
  rpc Call (CallRequest) returns (CallResponse) {};
}

message CallRequest {
  // Origination number
  string from = 1;
  // Destination number
  string to = 2;
  // Level of detail of the individual entities
  string webhook = 3;
  // If enabled it will accept any input in the from and to
  bool ignore_e164_validation = 4;
  // Metadata from the user
  string metadata = 5;
}

message CallResponse {
  string ref = 1;
}
